Fix multiplication of abs() by a negative value. (Bug #11402)